Add scale factor as a config option

--- a/config/this.config
+++ b/config/this.config
@@ -154,6 +154,8 @@ COMMON_JAVA_OPTS = [
 SPARK_DRIVER_MEMORY = "20g"
 # The following options value sets are shared among all tests.
 COMMON_OPTS = [
+    # Set the scale factor as a common opt so that it gets logged
+    OptionSet("scale-factor", [SCALE_FACTOR]),
     # How many times to run each experiment - used to warm up system caches.
     # This OptionSet should probably only have a single value (i.e., length 1)
     # since it doesn't make sense to have multiple values here.
