Fix option name "scale-factor" clashes.

--- a/config/this.config
+++ b/config/this.config
@@ -447,7 +447,7 @@ MLLIB_CLASSIFICATION_TEST_OPTS = MLLIB_GLM_TEST_OPTS + [
      # Expected fraction of examples which are negative
      OptionSet("per-negative", [0.3]),
      # The scale factor for the noise in feature values
-     OptionSet("scale-factor", [1.0])
+     OptionSet("noise-scale-factor", [1.0])
 ]
 
 # GLM Classification Tests #
@@ -464,7 +464,7 @@ NAIVE_BAYES_TEST_OPTS = MLLIB_REGRESSION_CLASSIFICATION_TEST_OPTS + [
     # Expected fraction of examples which are negative
     OptionSet("per-negative", [0.3]),
     # The scale factor for the noise in feature values
-    OptionSet("scale-factor", [1.0]),
+    OptionSet("noise-scale-factor", [1.0]),
     # Naive Bayes smoothing lambda.
     OptionSet("nb-lambda", [1.0])
 ]
