Add a SparseDataGenerator and SparseGLM Also commented out config changes

--- a/config/this.config
+++ b/config/this.config
@@ -434,6 +434,14 @@ MLLIB_GLM_REGRESSION_TEST_OPTS = MLLIB_GLM_TEST_OPTS + [
 MLLIB_TESTS += [("glm-regression", "mllib.perf." + MLLIB_SPARK_VERSION_STR + ".TestRunner", SCALE_FACTOR,
     MLLIB_JAVA_OPTS, [ConstantOption("glm-regression")] + MLLIB_GLM_REGRESSION_TEST_OPTS)]
 
+#MLLIB_SPARSE_GLM_REGRESSION_TEST_OPTS = MLLIB_GLM_REGRESSION_TEST_OPTS + [
+#    # Sparsity of input data
+#    OptionSet("sparsity", [0.1]),
+#]
+
+#MLLIB_TESTS += [("sparse-glm-regression", "mllib.perf." + MLLIB_SPARK_VERSION_STR + ".TestRunner", SCALE_FACTOR,
+#    MLLIB_JAVA_OPTS, [ConstantOption("sparse-glm-regression")] + MLLIB_SPARSE_GLM_REGRESSION_TEST_OPTS)]
+
 # Classification Tests #
 MLLIB_CLASSIFICATION_TEST_OPTS = MLLIB_GLM_TEST_OPTS + [
      # Expected fraction of examples which are negative
